# Deep_Learning_Facial_Key_Point_Recognition_on_Android

./: README.MD
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/fieldmaven/android/computervision2/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: face-key-point-detect-lib.cpp  face-key-point-detect-lib.h  native-lib.cpp  native-lib.h
app/src/main/cpp/models/: facialkeypoints_model_net.pb
app/src/main/java/com/fieldmaven/android/computervision2/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/fieldmaven/android/computervision2/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary341java/: build.gradle
openCVLibrary343/: build.gradle
